# viking-engine

./: .gitignore  .travis.yml  CMakeLists.txt  Camara.cpp  Camara.h  Doxyfile  Framework.h  Fuente.cpp  Fuente.h  LICENSE  Main.cpp  OGLInit.cpp  README.md  Textura.cpp  Textura.h  Timer.cpp  Timer.h  VKSkyDome.cpp  definiciones.h  sonar-project.properties
data/: arbol.tga  sol_mixteco.tga
data/skydome/: nubesFondo.tga  nubesFront.tga  sd_test.tga  sd_test2.tga  test.tga
framework/: BMPWriter.cpp  BMPWriter.h  Billboard.cpp  Billboard.h  Framework.h  Fuente.cpp  Fuente.h  OGLInit.cpp  OGLInit.h  Textura.cpp  Textura.h  TextureWriter.cpp  TextureWriter.h  Timer.cpp  Timer.h
framework/loggers/: ConsoleEventLogger.cpp  ConsoleEventLogger.h  EventLogger.cpp  EventLogger.h  HTMLEventLogger.cpp  HTMLEventLogger.h  TextEventLogger.cpp  TextEventLogger.h
framework/math/: Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  vector.h
framework/model_loaders/: MD2Loader.cpp  MD2Loader.h  MD2Model.cpp  MD2Model.h  Model3D.cpp  Model3D.h  Model3DLoader.h
framework/sky/: Clouds.cpp  Clouds.h  CloudsActualizables.cpp  CloudsActualizables.h  CloudsEstaticas.cpp  CloudsEstaticas.h  ColoredSkyDome.cpp  ColoredSkyDome.h  Perlin.h  Sky.h  SkyBox.cpp  SkyBox.h  SkyDome.cpp  SkyDome.h  TexturedSkyDome.cpp  TexturedSkyDome.h  TexturedSkyPlane.cpp  TexturedSkyPlane.h
loggers/: ConsoleEventLogger.cpp  EventLogger.cpp
math/: Matrix.h  Quaternion.cpp  Quaternion.h
model_loaders/: MD2Loader.cpp  MD2Loader.h  Model3D.cpp  Model3D.h  Model3DLoader.h
sky/: Clouds.cpp  CloudsActualizables.cpp  CloudsActualizables.h  CloudsEstaticas.h  ColoredSkyDome.h  Sky.h  SkyDome.cpp  TexturedSkyDome.cpp  TexturedSkyPlane.h
src/: BMPWriter.cpp  BMPWriter.h  Billboard.cpp  Billboard.h  Camara.cpp  Camara.h  Framework.h  Fuente.cpp  Fuente.h  Main.cpp  OGLInit.cpp  OGLInit.h  Textura.cpp  Textura.h  TextureWriter.cpp  TextureWriter.h  Timer.cpp  Timer.h  VKSkyDome.cpp  VKSkyDome.h  definiciones.h
src/framework/: BMPWriter.cpp  BMPWriter.h  Billboard.cpp  Billboard.h  Framework.h  Fuente.cpp  Fuente.h  Textura.cpp  Textura.h  Texture.cpp  Texture.h  TextureWriter.cpp  TextureWriter.h  Timer.cpp  Timer.h
src/framework/loggers/: ConsoleEventLogger.cpp  ConsoleEventLogger.h  EventLogger.cpp  EventLogger.h
src/framework/math/: Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  vector.h
src/framework/model_loaders/: MD2Loader.cpp  MD2Loader.h  MD2Model.cpp  MD2Model.h  Md2Model.cpp  Md2Model.h  Model3D.cpp  Model3D.h  Model3DLoader.h  Model3d.cpp  Model3d.h  ModelFactory.cpp  ModelFactory.h
src/framework/sky/: Clouds.cpp  Clouds.h  CloudsActualizables.cpp  CloudsActualizables.h  CloudsEstaticas.cpp  CloudsEstaticas.h  ColoredSkyDome.cpp  ColoredSkyDome.h  Perlin.h  Sky.h  SkyBox.cpp  SkyBox.h  SkyDome.cpp  SkyDome.h  StaticClouds.cpp  StaticClouds.h  TexturedSkyDome.cpp  TexturedSkyDome.h  TexturedSkyPlane.cpp  TexturedSkyPlane.h  UpdatableClouds.cpp  UpdatableClouds.h
src/loggers/: ConsoleEventLogger.h  EventLogger.h
src/math/: Matrix.cpp  Matrix.h  Quaternion.cpp  vector.h
src/model_loaders/: MD2Loader.cpp  MD2Loader.h  MD2Model.cpp  MD2Model.h  Model3D.cpp  Model3DLoader.h
src/sky/: Clouds.cpp  Clouds.h  CloudsActualizables.h  CloudsEstaticas.cpp  ColoredSkyDome.cpp  ColoredSkyDome.h  Perlin.h  Sky.h  SkyBox.cpp  SkyBox.h  SkyDome.h  TexturedSkyDome.h  TexturedSkyPlane.cpp
viking/: Camara.cpp  Camara.h  Main.cpp  VKSkyDome.cpp  VKSkyDome.h  definiciones.h
